# fasterhamer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: image_demo.py  webcam_demo.py  webcam_threaded_demo.py
src/fasthamer/: __init__.py  __init__.py.tmp.30827.bbf3644d3b70  assets.py  detection.py  fast_render.c  inference.py  preprocess.py  rendering.py  setup_cli.py  stabilize.py  tracker.py  types.py
tests/: test_detectors.py  test_handedness_geometry.py  test_parity.py  test_stabilize.py
